--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 				<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" style="color:whitesmoke;">
 					<p>
-						Hey there! I’m Nandish S, and I take immense pride in my roots from Bihar. My educational
+						Hey there! I’m Nandish S, and I take immense pride in my roots from Karntaka. My educational
 						journey has been quite the adventure—from the 10th grade all the way to graduation. Currently,
 						I’m deep into my MCA studies at RNSIT College in Bangalore. 🎓</p>
 					<p>
