--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
 						color:white;
 					}
 				  </style>
-					<li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 03 April 2002</li>
-					<li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8147280726 </li>
-					<li><i class="icofont-rounded-right"></i> <strong>Email:</strong> nandunandish10@gmail.com</li>
+					<li><i class="fa fa-calendar fa_custom" ></i>&nbsp; <strong>Birthday:</strong> 03 April 2002</li>
+					<li><i class="fa fa-phone fa_custom"></i>&nbsp; <strong>Phone:</strong> +91 8147280726 </li>
+					<li><i class="fa fa-user fa_custom"></i>&nbsp; <strong>Email:</strong> nandunandish10@gmail.com</li>
 				  </ul>
 				</div>
 			</div>
