--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
 				<span class="bg-transparent typing"
 					style="color:rgba(255, 166, 1, 0.902); font-family:open-sans"></span>
 			</h2>
+			<style>
+			  .btn-outline-warning{
+				color:white !important;
+			    
+			  }
+			  .btn-outline-warning:hover{
+				background-color: #ffa600 !important;
+				color:black !important;
+			  }
+			</style>
 			<h6>My Links</h6>
+				<a class="btn btn-outline-warning" href="assets/files/resume.pdf" download="Resume.pdf" >Download CV</a>&nbsp;&nbsp;
 			<a class="linkedin" href="https://www.linkedin.com/in/nandish-s-b89467223/"><i
 					class="fa fa-linkedin fa_custom fa-2x"></i></a>&nbsp;&nbsp;
 			<a class="Github" href="https://github.com/Nandi02"> <i class="fa fa-github fa_custom fa-2x"></i></a>
