--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<style>
 			  .btn-outline-warning{
 				color:white !important;
-			    
+			        border-color:black;
 			  }
 			  .btn-outline-warning:hover{
 				background-color: #ffa600 !important;
