--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			</button>
 
 			<div class="collapse navbar-collapse" style="padding-right:5px;" id="navbarSupportedContent">
-				<ul class="navbar-nav " style="padding:3px;">
+				<ul class="navbar-nav ml-auto " style="padding:3px;">
 					<li class="nav-item active">
 						<a class="nav-link text-white" href="#home" data-section="home">Home<span
 								class="sr-only">(current)</span></a>
