--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				}
 			</style>
 			<h6>My Links</h6>
-			<a class="btn btn-outline-warning" href="assets/files/resume.pdf" download="Resume.pdf">Download
+			<a class="btn btn-outline-warning" href="files/resume.pdf" download="Resume.pdf">Download
 				CV</a>&nbsp;&nbsp;
 			<a class="linkedin" href="https://www.linkedin.com/in/nandish-s-b89467223/"><i
 					class="fa fa-linkedin fa_custom fa-2x"></i></a>&nbsp;&nbsp;
