--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
 
 		var typed = new Typed('.typing', {
-			strings: ["Web Designer", "Coder", "Logical Thinker", "Creative Person", "Good Listener", "AI Enthusiastic", "Backekend Develepor", "Database administrator", 'Full Stack Developer'],
+			strings: ["Web Designer", "Coder", "Logical Thinker", "Creative Person", "Good Listener", "AI Enthusiastic", "Backekend Developer", "Database administrator", 'Full Stack Developer'],
 			loop: true,
 			typeSpeed: 100,
 			backSpeed: 85
