--- a/index.html
+++ b/index.html
@@ -461,6 +461,11 @@
 			</div>
 	</section>
 
+<!--Pre loader-->
+<div class="wrapper">
+	<div class="loader"></div>
+</div>
+    <script src="assets/script.js"></script>
 
 	<script>
 
