--- a/index.html
+++ b/index.html
@@ -383,39 +383,90 @@
 	</section>
 
 	<section class="skils" id="skils">
-		<div class="container">
+		<div class="container" id="skills">
 			<div class="section-title">
 				<h2 class="about-me text-white" style="font-family:'Lato','sans-serif'; text-align:center">Skills
 				</h2>
 			</div><br />
 			<style>
-				.img {
-					width: 120px;
-					height: 120px;
-					padding-bottom: 20px !important;
+				#skills {
+					padding-left: 25px !important;
+					padding-right: 25px !important;
+				}
+	
+				.box {
+					width: 130px;
+					display: inline-block;
+					height: 110px;
+					border: 1px solid black;
+					color: rgba(0, 0, 0, 0.228);
+					border-radius: 5%;
+					box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.505);
+					padding-bottom: 10px;
+					padding-top: 10px;
+	
+					margin: 10px 10px 10px 10px;
+				}
+	
+				.box>img {
+					width: 100%;
+					max-height: 100%;
+					object-fit: contain;
+				}
+	
+				.cont {
+					opacity: 0;
+					transition: 1s ease;
+					filter: blur(5px);
+					transform: translateX(-100%);
+				}
+	
+				.show {
+					opacity: 1;
+					filter: blur(0);
+					transform: translateX(0);
 				}
 			</style>
-			<img src="assets/images/logs/html.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/css.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/arduino.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/figma.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/flask.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/java.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/js.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/php.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/python.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/raspberry-.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/sql.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/vs.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/c.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/c++.png" alt="no image" class="img-responsive img" style="width:100px" />
-			<img src="assets/images/logs/jquery.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/angularjs.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/bootstrap-logo.png" alt="no image" class="img-responsive img" />
-			<img src="assets/images/logs/collab.png" alt="no image" class="img-responsive img" />
+			<div class="cont">
+				<div class="box cont"><img src="assets/images/logs/html.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/css.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/arduino.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/figma.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/flask.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/java.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/js.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/php.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/python.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/raspberry-.png" alt="no image"
+						class="img-responsive img" /></div>
+				<div class="box cont"><img src="assets/images/logs/sql.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/vs.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/c.png" alt="no image" class="img-responsive img" /></div>
+				<div class="box cont"><img src="assets/images/logs/c++.png" alt="no image" class="img-responsive img"
+						style="width:100px" /></div>
+				<div class="box cont"><img src="assets/images/logs/jquery.png" alt="no image" class="img-responsive img" />
+				</div>
+				<div class="box cont"><img src="assets/images/logs/angularjs.png" alt="no image"
+						class="img-responsive img" /></div>
+				<div class="box cont"><img src="assets/images/logs/bootstrap-logo.png" alt="no image"
+						class="img-responsive img" /></div>
+				<div class="box cont"><img src="assets/images/logs/collab.png" alt="no image" class="img-responsive img" />
+				</div>
+			</div>
 		</div>
 	</section>
-
+<!--End of section-->
 
 	<section class="contact" id="contact">
 		<div class="container">
@@ -507,6 +558,20 @@
 			typeSpeed: 100,
 			backSpeed: 85
 		});
+
+		//Skill section
+			const observer = new IntersectionObserver((entries) => {
+				entries.forEach((entry) => {
+					if (entry.isIntersecting) {
+						entry.target.classList.add('show');
+					}
+					else {
+						entry.target.classList.remove('show');
+					}
+				})
+			});
+			const hiddenElements = document.querySelectorAll('.cont');
+			hiddenElements.forEach((el) => observer.observe(el));
 
 	</script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
